
JabberPublisher:
----------------------
* Support setting different "service". (CC-346) Patch by Ahti Kitsik.

JMX interface:
----------------------
* When setting the configuration contents via JMX, the contents are validated (CC-333). Patch by Allan Wick.

(Log)Manipulator:
----------------------
* Added a new class of plug-ins that can be nested within the log element to handle tasks in the log directory. Initial implementations are the DeleteManipulator (delete old logs) and the GZIPManipulator (gzip old logs). Contributed by Michael Kloss.


MergeLogger:
----------------------
* cleanly skip non existing log files and directories

MKS:
----------------------
* Support archive filenames with spaces (CC-376). Patch by Martin Aberle.

NavigationTag:
----------------------
* Remove support for log files timestamped without a second part

P4ChangelistLabelIncrementer:
----------------------
* New label incrementer for use with a Perforce changelist (CC-379). Patch by Matt Albrecht

Project:
----------------------
* Remove methods to get/set config file from Project and corresponding jmx interface classes
* ModificationSet is no longer a required element; when missing builds must be forced.
* Fix a testcase failure on MacOS X. Reported by Michael Kloss.
* Build after failed was not getting set properly. Patch by Brad Clarke.

ProjectConfig:
----------------------
* Validates subelements by calling their "validate()" methods.

Schedule:
----------------------
* Fix getTimeToNextBuild to adjust for daylight savings time (CC-104).

SfeeFrsPublisher:
----------------------
* A new publisher for uploading files to a SourceForge Enterprise Edition's File Release System.

SfeeTrackerPublisher:
----------------------
* A new publisher for creating a tracker artifact in a SourceForge Enterprise Edition project.
* Extracted XPathAwareChild and NamedXPathAwareChild to make usable by other plugins.

SfeeDocumentManagerPublisher:
----------------------